# alternador-wallpapers

./: Cargo.toml  Makefile  README.md  build.rs
data/: configuracao.json  historico_de_escolhas_feitas.txt  ultima_escolha.txt
extern_lib/: libutilitarios.rlib
extern_lib/slide_background/: atualiza_configuracao_xml.py  requiments.txt  utilitarios.py  variaveis.py  xml_info.py
extern_lib/utilitarios/: Cargo.toml
extern_lib/utilitarios/src/: aleatorio.rs  arvore.rs  barra_de_progresso.rs  escadinha.rs  lib.rs
extern_lib/utilitarios/tests/: tipos_de_barras_de_progresso.rs
lib/slide_background/: atualiza_configuracao_xml.py  utilitarios.py  xml_info.py
scripts/: arquivar-partes-importantes.py  converte_historico_de_escolhas_para_json.py  copia_e_linca_bibliotecas_ja_compiladas.py  geracao_e_atualizacao_de_todos_xml.py
src/: atualizacoes.rs  banco_de_dados.rs  comparacao.rs  compilacao.rs  comunicacao.rs  configuracao.rs  constantes.rs  lib.rs  linque.rs  main.rs  notificacoes.rs  transicao.rs
src/transicao/: datas_especiais.conf  datas_especiais.rs  embaralhamento.rs  resolve_repeticoes.rs
tests/: execucoes_continuas.rs
