[package]
name = "personalizacao"
version = "0.3.4"
edition = "2021"

[dependencies]
date_time = { path="extern_lib/date-time/", version="2.2.0" }
fastrand = { path="extern_lib/fastrand/", version="1.5.0" }
xshell = { path="extern_lib/xshell/", version="0.1.17" }
utilitarios = { path="extern_lib/utilitarios/", version="0.3.3" }
