[package]
name = "alternador_wallpapers"
version = "0.5.5"
edition = "2021"

[dependencies]
date_time = { path="extern_lib/date-time/", version="2.2.0" }
utilitarios = { path="extern_lib/utilitarios/", version="1.0.1" }
serde_json = "1.0.91"

[dev-dependencies]
#fastrand = "1.*.*"
fastrand = "1.8.0"
#serde_json = "1.0.91"
