[package]
name = "alternador_wallpapers"
version = "1.0.0"
edition = "2021"

[dependencies]
date_time = { path="extern_lib/date-time/", version="2.2.0" }
#utilitarios = { path=ju"extern_lib/utilitarios/", version="1.0.1" }
utilitarios = { path="../rust-utilitarios/" }
serde_json = "1.0.91"

[dev-dependencies]
fastrand = "1.8.0"
